--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li><a href="GlowingButton.html">Glowing</br>Button</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="wave.html">Wave</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Team</a></li>
             <li><a href="#">Portfolio</a></li>
