--- a/wave.html
+++ b/wave.html
@@ -8,7 +8,7 @@
         <section class="waveSection">
             <div class="wave" style="transform: scaleY(-1); top:0; animation-delay:5s"></div>
         </section>
-        버튼 주위에 동그랗게 회전하는 도넛 만들예정
+        asdf
         <section class="waveSection">
             <div class="wave"></div>
         </section>
