--- a/wave.html
+++ b/wave.html
@@ -1,16 +1,26 @@
 <html>
     <head>
+        <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet"/>
         <link href="style.css" rel="stylesheet">
         <script src="script.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <section class="waveSection">
-            <div class="wave" style="transform: scaleY(-1); top:0; animation-delay:5s"></div>
+            <div class="wave" style="transform: scaleY(-1); top:0; animation-delay:4s"></div>
         </section>
-        asdf
-        <section class="waveSection">
-            <div class="wave"></div>
+        <section class="asdf" style="height: 10%">
+            <a href="index.html">
+                <div class="loader" onClick="">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </a>
+        </section>
+        <section class="waveSection" style="bottom:0">
+            <div class="wave" style="bottom:0;"></div>
         </section>
     </body>
 </html>
