--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <ul>
             <li><a href="GlowingButton.html">Glowing</br>Button</a></li>
             <li><a href="wave.html">Wave</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="sns\youtube.html">Youtube</a></li>
+            <li><a href="#">개발중</a></li>
+            <li><a href="#">개발중</a></li>
+            <li><a href="#">개발중</a></li>
         </ul>
     </body>
 </html>
