--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -2,28 +2,32 @@
     <head>
         <link href="style.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet"/>
+        <script src="https://kit.fontawesome.com/760c40f62e.js" crossorigin="anonymous"></script>
     </head>
-    <body style="height: 1500px; margin:0; padding: 0;">
+    <body style="margin:0; padding: 0;">
         <div class="header">
         <!-- 상단 바 -->
-            <div class="top_">
-                <a href="#" style="font-size: 24px;">
-                    <i class="fa fa-solid fa-bars"></i>
-                </a>
-                <a href="#">
-                    <img src="..\img\logo.png" class="youtube-icon">
-                </a>
-                <a>
-                    <input type="serech" placeholder="검색" class="serech">
-                </a>
-                <a href="#">
-                    <i id="magnifying" class="fa fa-thin fa-magnifying-glass"></i>
-                </a>
-                <a href="#" style="font-size: 24px">
-                    <i class="fa-solid fa-microphone"></i>
-                </a>
-                <span class="right">
+            <div class="container">
+                <div class="left">
+                    <a href="#" style="font-size: 24px;" class="menu">
+                        <i class="fa fa-solid fa-bars"></i>
+                    </a>
+                    <a href="#" class="youtube-icon">
+                        <img src="..\img\logo.png" class="youtube-icon-img">
+                    </a>
+                </div>
+                <div class="mid">
+                    <a>
+                        <input type="serech" placeholder="검색" class="serech">
+                    </a>
+                    <a href="#">
+                        <i id="magnifying" class="fa fa-thin fa-magnifying-glass"></i>
+                    </a>
+                    <a href="#" style="font-size: 24px" >
+                        <i class="fa-solid fa-microphone"></i>
+                    </a>
+                </div>
+                <div class="right">
                     <a href="#" style="font-size: 24px">
                         <i class="fa fa-thin fa-video"></i>
                     </a>
@@ -33,7 +37,47 @@
                     <a href="#">
                         <img src="..\img\profile.png" class="profile">
                     </a>
-                </span>
+                </div>
+            </div>
+        </div>
+        <div class="bodyer">
+            <div class="guide">
+                <div class="renderer">
+                    <a href="#">
+                        <i class="fa-solid fa-house"></i> 홈
+                    </a>
+                    <a href="#">
+                        <i class="fa-regular fa-compass"></i> 탐색
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-youtube"></i> Shorts
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-clapperboard"></i> 구독
+                    </a>
+                    <a></a>
+                    <a href="#">
+                        <i class="fa-solid fa-photo-film"></i> 보관함
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-clock-rotate-left"></i> 시청 기록
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-light fa-square-caret-right"></i> 내 동영상
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-light fa-clock"></i> 시청 기록
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-light fa-scissors"></i> 내 클립
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-light fa-angle-down"></i> 더보기
+                    </a>
+                </div>
+            </div>
+            <div class="video">
+
             </div>
         </div>
     </body>
