--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -44,7 +44,7 @@
             <div class="guide">
                 <div class="renderer">
                     <a href="#">
-                        <i class="fa-solid fa-house"></i> 홈
+                        <i class="fa-solid fa-house"></i>   홈
                     </a>
                     <a href="#">
                         <i class="fa-regular fa-compass"></i> 탐색
@@ -76,8 +76,71 @@
                     </a>
                 </div>
             </div>
-            <div class="video">
-
+            <div class="video-section">
+                <a href="#">
+                    <div class="video">
+                        <img class="thumbnail" src="..\img\thumbnail.png">
+                        <div class="lore">
+                            <img class="channel" src="..\img\channel.jpg">
+                            <div class="video-lore-text">
+                                <span class="title">Youbute video!!!</span>
+                                <div>
+                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                    <br>
+                                    조회수 10만회 ⦁ 1시간 전
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="video">
+                        <img class="thumbnail" src="..\img\thumbnail.png">
+                        <div class="lore">
+                            <img class="channel" src="..\img\channel.jpg">
+                            <div class="video-lore-text">
+                                <span class="title">Youbute video!!!</span>
+                                <div>
+                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                    <br>
+                                    조회수 10만회 ⦁ 1시간 전
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="video">
+                        <img class="thumbnail" src="..\img\thumbnail.png">
+                        <div class="lore">
+                            <img class="channel" src="..\img\channel.jpg">
+                            <div class="video-lore-text">
+                                <span class="title">Youbute video!!!</span>
+                                <div>
+                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                    <br>
+                                    조회수 10만회 ⦁ 1시간 전
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="video">
+                        <img class="thumbnail" src="..\img\thumbnail.png">
+                        <div class="lore">
+                            <img class="channel" src="..\img\channel.jpg">
+                            <div class="video-lore-text">
+                                <span class="title">Youbute video!!!</span>
+                                <div>
+                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                    <br>
+                                    조회수 10만회 ⦁ 1시간 전
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </body>
