--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -141,6 +141,38 @@
                         </div>
                     </div>
                 </a>
+                <a href="#">
+                    <div class="video">
+                        <img class="thumbnail" src="..\img\thumbnail.png">
+                        <div class="lore">
+                            <img class="channel" src="..\img\channel.jpg">
+                            <div class="video-lore-text">
+                                <span class="title">Youbute video!!!</span>
+                                <div>
+                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                    <br>
+                                    조회수 10만회 ⦁ 1시간 전
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="video">
+                        <img class="thumbnail" src="..\img\thumbnail.png">
+                        <div class="lore">
+                            <img class="channel" src="..\img\channel.jpg">
+                            <div class="video-lore-text">
+                                <span class="title">Youbute video!!!</span>
+                                <div>
+                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                    <br>
+                                    조회수 10만회 ⦁ 1시간 전
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </body>
