--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://kit.fontawesome.com/760c40f62e.js" crossorigin="anonymous"></script>
     </head>
-    <body style="margin:0; padding: 0;">
+    <body>
         <div class="header">
         <!-- 상단 바 -->
             <div class="container">
@@ -18,7 +18,7 @@
                 </div>
                 <div class="mid">
                     <a>
-                        <input type="serech" placeholder="검색" class="serech">
+                        <input type="serech" placeholder=" 검색" class="serech">
                     </a>
                     <a href="#">
                         <i id="magnifying" class="fa fa-thin fa-magnifying-glass"></i>
@@ -44,7 +44,7 @@
             <div class="guide">
                 <div class="renderer">
                     <a href="#">
-                        <i class="fa-solid fa-house"></i>   홈
+                        <i class="fa-solid fa-house"></i> 홈
                     </a>
                     <a href="#">
                         <i class="fa-regular fa-compass"></i> 탐색
