--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -32,6 +32,9 @@
                         <i class="fa fa-thin fa-video"></i>
                     </a>
                     <a href="#" style="font-size: 24px">
+                        <i class="fa fa-light fa-ellipsis-vertical"></i>
+                    </a>
+                    <a href="#" style="font-size: 24px">
                         <i class="fa fa-thin fa-bell"></i>
                     </a>
                     <a href="#">
@@ -43,7 +46,7 @@
         <div class="bodyer">
             <div class="guide">
                 <div class="renderer">
-                    <a href="#">
+                    <a href="#" class="guide-main">
                         <i class="fa-solid fa-house"></i> 홈
                     </a>
                     <a href="#">
@@ -76,103 +79,117 @@
                     </a>
                 </div>
             </div>
-            <div class="video-section">
-                <a href="#">
-                    <div class="video">
-                        <img class="thumbnail" src="..\img\thumbnail.png">
-                        <div class="lore">
-                            <img class="channel" src="..\img\channel.jpg">
-                            <div class="video-lore-text">
-                                <span class="title">Youbute video!!!</span>
-                                <div>
-                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                    <br>
-                                    조회수 10만회 ⦁ 1시간 전
+            <div class="video-field">
+                <div class="category">
+                    <span class="category-button-main">전체</span>
+                    <span class="category-button">실시간</span>
+                    <span class="category-button">게임</span>
+                    <span class="category-button">음악</span>
+                    <span class="category-button">믹스</span>
+                    <span class="category-button">수학</span>
+                    <span class="category-button">액션 어드벤처 게임</span>
+                    <span class="category-button">요리</span>
+                    <span class="category-button">애니메이션</span>
+                    <span class="category-button">반려동물</span>
+                </div>
+                <div class="video-section">
+                    <a href="#">
+                        <div class="video">
+                            <img class="thumbnail" src="..\img\thumbnail.png">
+                            <div class="lore">
+                                <img class="channel" src="..\img\channel.jpg">
+                                <div class="video-lore-text">
+                                    <span class="title">Youbute video!!!</span>
+                                    <div>
+                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                        <br>
+                                        조회수 10만회 ⦁ 1시간 전
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="video">
-                        <img class="thumbnail" src="..\img\thumbnail.png">
-                        <div class="lore">
-                            <img class="channel" src="..\img\channel.jpg">
-                            <div class="video-lore-text">
-                                <span class="title">Youbute video!!!</span>
-                                <div>
-                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                    <br>
-                                    조회수 10만회 ⦁ 1시간 전
+                    </a>
+                    <a href="#">
+                        <div class="video">
+                            <img class="thumbnail" src="..\img\thumbnail.png">
+                            <div class="lore">
+                                <img class="channel" src="..\img\channel.jpg">
+                                <div class="video-lore-text">
+                                    <span class="title">Youbute video!!!</span>
+                                    <div>
+                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                        <br>
+                                        조회수 10만회 ⦁ 1시간 전
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="video">
-                        <img class="thumbnail" src="..\img\thumbnail.png">
-                        <div class="lore">
-                            <img class="channel" src="..\img\channel.jpg">
-                            <div class="video-lore-text">
-                                <span class="title">Youbute video!!!</span>
-                                <div>
-                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                    <br>
-                                    조회수 10만회 ⦁ 1시간 전
+                    </a>
+                    <a href="#">
+                        <div class="video">
+                            <img class="thumbnail" src="..\img\thumbnail.png">
+                            <div class="lore">
+                                <img class="channel" src="..\img\channel.jpg">
+                                <div class="video-lore-text">
+                                    <span class="title">Youbute video!!!</span>
+                                    <div>
+                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                        <br>
+                                        조회수 10만회 ⦁ 1시간 전
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="video">
-                        <img class="thumbnail" src="..\img\thumbnail.png">
-                        <div class="lore">
-                            <img class="channel" src="..\img\channel.jpg">
-                            <div class="video-lore-text">
-                                <span class="title">Youbute video!!!</span>
-                                <div>
-                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                    <br>
-                                    조회수 10만회 ⦁ 1시간 전
+                    </a>
+                    <a href="#">
+                        <div class="video">
+                            <img class="thumbnail" src="..\img\thumbnail.png">
+                            <div class="lore">
+                                <img class="channel" src="..\img\channel.jpg">
+                                <div class="video-lore-text">
+                                    <span class="title">Youbute video!!!</span>
+                                    <div>
+                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                        <br>
+                                        조회수 10만회 ⦁ 1시간 전
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="video">
-                        <img class="thumbnail" src="..\img\thumbnail.png">
-                        <div class="lore">
-                            <img class="channel" src="..\img\channel.jpg">
-                            <div class="video-lore-text">
-                                <span class="title">Youbute video!!!</span>
-                                <div>
-                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                    <br>
-                                    조회수 10만회 ⦁ 1시간 전
+                    </a>
+                    <a href="#">
+                        <div class="video">
+                            <img class="thumbnail" src="..\img\thumbnail.png">
+                            <div class="lore">
+                                <img class="channel" src="..\img\channel.jpg">
+                                <div class="video-lore-text">
+                                    <span class="title">Youbute video!!!</span>
+                                    <div>
+                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                        <br>
+                                        조회수 10만회 ⦁ 1시간 전
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="video">
-                        <img class="thumbnail" src="..\img\thumbnail.png">
-                        <div class="lore">
-                            <img class="channel" src="..\img\channel.jpg">
-                            <div class="video-lore-text">
-                                <span class="title">Youbute video!!!</span>
-                                <div>
-                                    유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                    <br>
-                                    조회수 10만회 ⦁ 1시간 전
+                    </a>
+                    <a href="#">
+                        <div class="video">
+                            <img class="thumbnail" src="..\img\thumbnail.png">
+                            <div class="lore">
+                                <img class="channel" src="..\img\channel.jpg">
+                                <div class="video-lore-text">
+                                    <span class="title">Youbute video!!!</span>
+                                    <div>
+                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                        <br>
+                                        조회수 10만회 ⦁ 1시간 전
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
