--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -78,19 +78,50 @@
                         <i class="fa fa-light fa-angle-down"></i> 더보기
                     </a>
                 </div>
+                <div class="subscribe">
+                    <span style="font-size:14; color: #606060">
+                        구독
+                    </span>
+                    <a href="#">
+                        <img src="..\img\css.png"> <span>CSS</span>
+                    </a>
+                    <a href="#">
+                        <img src="..\img\c.png"> <span>그저 C</span>
+                    </a>
+                    <a href="#">
+                        <img src="..\img\java.png"> <span>자바</span>
+                    </a>
+                    <a href="#">
+                        <img src="..\img\python.png"> <span>파이썬</span>
+                    </a>
+                    <a href="#">
+                        <img src="..\img\typescript.png"> <span>타입스크립트</span>
+                    </a>
+                    <a href="#">
+                        <img src="..\img\javascript.png"> <span>자바스크립트</span>
+                    </a>
+                    <a href="#">
+                        <img src="..\img\html.png"> <span>!프로그래밍언어</span>
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-light fa-angle-down" style="margin:0 24 0 6"></i> 123개 더보기
+                    </a>
+                </div>
             </div>
             <div class="video-field">
                 <div class="category">
-                    <span class="category-button-main">전체</span>
-                    <span class="category-button">실시간</span>
-                    <span class="category-button">게임</span>
-                    <span class="category-button">음악</span>
-                    <span class="category-button">믹스</span>
-                    <span class="category-button">수학</span>
-                    <span class="category-button">액션 어드벤처 게임</span>
-                    <span class="category-button">요리</span>
-                    <span class="category-button">애니메이션</span>
-                    <span class="category-button">반려동물</span>
+                    <a href="#" class="category-button-main">전체</a>
+                    <a href="#" class="category-button">실시간</a>
+                    <a href="#" class="category-button">게임</a>
+                    <a href="#" class="category-button">음악</a>
+                    <a href="#" class="category-button">믹스</a>
+                    <a href="#" class="category-button">스포츠</a>
+                    <a href="#" class="category-button">수학</a>
+                    <a href="#" class="category-button">뉴스</a>
+                    <a href="#" class="category-button">액션 어드벤처 게임</a>
+                    <a href="#"  class="category-button">요리</a>
+                    <a href="#"  class="category-button">애니메이션</a>
+                    <a href="#"  class="category-button">반려동물</a>
                 </div>
                 <div class="video-section">
                     <a href="#">
