--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -17,13 +17,11 @@
                     </a>
                 </div>
                 <div class="mid">
-                    <a>
-                        <input type="serech" placeholder=" 검색" class="serech">
-                    </a>
-                    <a href="#">
+                    <input type="serech" placeholder="검색" class="serech">
+                    <a href="#"></a>
                         <i id="magnifying" class="fa fa-thin fa-magnifying-glass"></i>
                     </a>
-                    <a href="#" style="font-size: 24px" >
+                    <a href="#" style="font-size: 24px;" >
                         <i class="fa-solid fa-microphone"></i>
                     </a>
                 </div>
@@ -74,9 +72,23 @@
                     <a href="#">
                         <i class="fa fa-light fa-scissors"></i> 내 클립
                     </a>
-                    <a href="#">
-                        <i class="fa fa-light fa-angle-down"></i> 더보기
-                    </a>
+                    <div class="hide-guide">
+                        <a href="#">
+                            <i class="fa fa-thin fa-thumbs-up"></i> 좋아요 표시한 동영상
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-light fa-list"></i> 재생목록1
+                        </a>
+                        <a href="#">
+                                <i class="fa fa-light fa-list"></i> 재생목록2
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-light fa-list"></i> 재생목록3
+                        </a>
+                        <a href="#" class="item">
+                            <i class="fa fa-light fa-angle-down"></i> <span>더보기</span>
+                        </a>
+                    </div>
                 </div>
                 <div class="subscribe">
                     <span style="font-size:14; color: #606060">
@@ -223,5 +235,6 @@
                 </div>
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
